# snippets

./: .gitignore  .gitmodules  .hgignore
applescript/: FishBackup.applescript  TagSnowboarding.applescript  aifffix.applescript  evernotebak.scpt  ical-to-org-mode.applescript  mp3fix.applescript
applescript/Misc/: Gimp.applescript  LockAll.applescript  UnLockAll.applescript
applescript/Video/: AnamorphicUnsquish.applescript  AnamorphicUnsquishSmall.applescript  AnnotateMov.applescript  GetImage.applescript  LetterBoxDroplet.applescript
applescript/iCal/: ClearCalendar.applescript  UpdateCalendar.applescript
applescript/proximity/: Entering.applescript  Entering.scpt  Leaving.applescript  Leaving.scpt
appscript/: cleanup.js  drop.js  flightrename.js  misc.js
arduino/: jtherm.pde  servotest.ino  thermometer.pde  vmusic.pde
arduino/analoglog/: analoglog.ino  logweb.go
arduino/att85timer/: att85timer.ino
arduino/bikelights/: bikelights.ino
arduino/cannedlights/: cannedlights.ino
arduino/failsafe/: failsafe.ino
arduino/huewheel/: huewheel.ino
arduino/lightbutton/: color.h  lightbutton.ino
arduino/msplights/: msp.cpp  msp.h  msplights.ino
arduino/rclights/: rclights.h  rclights.ino
arduino/sensordisplay/: sensordisplay.ino
arduino/sumd/: sumd.h  sumd.ino
arduino/tinylights/: msp.cpp  msp.h  tinylights.ino
autoconf/: pthread.m4
avr/deppm/: Makefile  deppm.S
avr/failsafe/: .gitignore  Makefile  failsafe.S
c++/logmerge/: configure
c/c/: bitcount.c
c/c/misc/scrabble/: Makefile  Makefile.in  buildit.c  configure  configure.in  dict.c  dict.h  scoring.c  scrabble.h  search.c
c/c/net/nids/httplog/: Makefile  Makefile.in  configure  configure.in  httplog.c  httplog.h
c/c/net/numlookup/: Makefile  Makefile.in  configure  configure.in  hash.c  hash.h  libparselist.c  mymalloc.c  mymalloc.h  parselist.c  parselist.h
c/c/net/pcap/acct/: Makefile.in  acct.h  configure  configure.in  filter.c  hash.c  hash.h  main.c
c/c/net/tcp/aim/: Makefile.in  aim.c  aim.h  configure.in  roast.c  utility.c
c/c/net/tcp/hcp/: Makefile.in  configure  configure.in  http.c  http.h  post.c
c/c/net/tcp/proxycgi/: Makefile.in  configure  configure.in  main.c  proxycgi.h  sockets.c  utility.c
c/c/net/tcp/websplat/: Makefile.in  configure  configure.in  main.c  sockets.c  splat.h  url.c
c/c/net/tcp/websplat/testing/: cmd  gather  xml.post
c/c/net/udp/mbk/mbkd/: Makefile.in  config.h.in  configure  configure.in  definitions.h  hash.c  hash.h  main.c  mbk.c  mbkd.h  md5.c  md5.h  mymalloc.c  mymalloc.h  nettools.c  nettools.h  sample_send.c  sockets.c  utility.c
c/c/radius/: Makefile.in  TODO  configure  configure.in  fig.c  parsedetail.c  postprocess.c
c/c/security/fstate/: configure.in  main.c
c/dlopen/: dltest.c
c/math/: convert.c
c/misc/: acctdump.c  accton.c  cdda.c  eatcpu.c  hak.c  mcp.c  numbersort.c  parseSqlLog.c  (+2 more)
c/net/rpc/: Makefile.in  array.c  configure  configure.in  createimages  rrdrstat.c  rstat.c
c/pgsql/: .arch-inventory  Makefile.in  README  array.h  configure  configure.in  logcopy.c  tablecounter.c  tablelister.c
cpp/logmerge/: Makefile.in  configure.in  test.cc
d/: db0.d  hello.d  waitforsocket.d
dtrace/: lock-collector.d  rwtime.d  syscalls_per_proc.d  systime.d  trace_exec.d
eagle/: 4pwm.brd  4pwm.sch  dsal.lbr  littlelights.brd  littlelights.sch  littlerlights.brd  littlerlights.sch  transponder.brd  transponder.sch
eiffel/: cgi.e  hello.e  hello2.e  isprime.e  keyvalue.e  square.e
erlang/: .arch-inventory  conversions.erl  coursemp.erl  d_utils.erl  hello.erl  mnesia_test.erl  mrecv.c  mrecv.erl  multiprocess.erl  netstrings.erl  postgres.erl  remote_code.erl  runhello  sup_test.erl  tempconv.erl  wx200.erl
fxscript/: =README  BlockTransition  ChannelCopyTrans  GridFilter  ProgressiveBlurFilter  RandomBlockTransition  StrobeFilter  StrobeTransition
haskell/: gates.hs  montyhall.hs
io/: webServer.io  webServerTest.io  xmlrpc.io  xmlrpctest.io
java/: ClassResolver.java  GetImage.java  Showpic.java  Showpic2.java  dabutton.html  date.java  getit.java  showpic.html
js/: debug.js  kittycode.js  menuthing.html
launchd/: com.caring.hgup.plist  net.spy.beanstalkd.plist  net.spy.memcached.plist  net.spy.onvolume.plist  net.spy.portcheck.plist  net.spy.portupdate.plist
lisp/: blog.el  humanize.el  moneyviews.el  play.el  prime.el  snpp-client.el
objc/objc/snppclient/: Makefile.in  configure.in
objc/objc/snppclient/include/: dSNPP.h  dSSocket.h  dSocket.h  dString.h  snppclient.h
objc/objc/snppclient/snpp/: Makefile.in  dSNPP.m  snpp.m  test.m
ocaml/: CHANGELOG  COPYING
perl/: DB.pm  TmpFile.pm
pov/: animate.sh  ipa.pov  light.pov  lights.inc  roundbar.pov  spy-animate.ini  spy.pov  spy_words.inc
r/: motors.r
ruby/: beanstalk-queue-stats.rb  beanstalk-stats.rb  bundle-replicate  hashhisto.rb  histo.rb  memcache_rrd.rb  proc_enumerator.rb  rrd_grapher.rb  snmp_proxy.rb  sysinfo_rrd.rb
scad/: .gitignore  antennahanger.scad  bearingcap.scad  clampmount.scad  corner.scad  diamond.scad  diamondring.scad  dph-box.scad  dps-box.scad  filament-guide.scad  froggercam.scad  halfcube.scad  handlemount.scad  hangerbrace-bottom.scad  hangerbrace.scad  hs1177adaptor.scad  josbox.scad  moon.scad  obdii.scad  pasteholder.scad  planterring.scad  powerpolebracket.scad  pyramid.scad  qavcam.scad  qavcam2.scad  quick_release.scad  rfestand.scad  roundpot.scad  s800-electronics.scad  screenmount.scad  slideguide.scad  ss4-box.scad  swisscheese.scad  threads.scad  tripodadaptor.scad  wireholder.scad  xkcd-coaster.scad  xt30.scad  xt60.scad  xt90.scad  (+1 more)
scheme/: ChirpTemp.rkt  amb.scm  dates.scm  hash.scm  loganalyze.scm  misclib.scm  prime.scm  quicksort.scm
scotty/: alive  bigping  checkinterrors  checkntp  checkrouters  discover  getarp  machinfo  trapsinker  watchvar
sh/: colorify  convertFromStupidCamera  filemonitor  setup-hgwebdir  shelllock.sh  untilsuccessful  update-hg
sketchup/: ramp.skp
sql/: addplpgsql.sql  doit.sql  files.sql  scale.sql  temperature_hist.sql  zip.sql
tcl/: rebootrouter.tcl
(+2672 files in other folders)
