dnl Process this file with autoconf to produce a configure script.
AC_INIT(LogFile.h)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile)
