dnl Process this file with autoconf to produce a configure script.
AC_INIT(postprocess.c)

dnl Checks for programs.
AC_PROG_CC(-g)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
