dnl Process this file with autoconf to produce a configure script.
AC_INIT(mymalloc.c)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strspn sprintf snprintf vsnprintf vsprintf)

AC_OUTPUT(Makefile)
