dnl Process this file with autoconf to produce a configure script.
AC_INIT(httplog.c)

dnl Checks for programs.

dnl Checks for libraries.
dnl Replace `main' with a function in -lnet:
AC_CHECK_LIB(net, main)
dnl Replace `main' with a function in -lpcap:
AC_CHECK_LIB(pcap, pcap_loop)
dnl Replace `main' with a function in -lnids:
AC_CHECK_LIB(nids, nids_init)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_STRUCT_TM
AC_C_BIGENDIAN

if test ac_cv_c_bigendian = "yes"
then
	CFLAGS="$CFLAGS -DLIBNET_BIG_ENDIAN"
else
	CFLAGS="$CFLAGS -DLIBNET_LIL_ENDIAN"
fi

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(strdup strstr)

AC_OUTPUT(Makefile)
