dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)

dnl Checks for programs.

dnl Checks for libraries.
dnl Replace `main' with a function in -lpcap:
AC_CHECK_LIB(pcap, main)
AC_CHECK_LIB(pthread, pthread_mutex_init)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/file.h sys/ioctl.h syslog.h unistd.h)
AC_CHECK_HEADERS(pthread.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)
