dnl Process this file with autoconf to produce a configure script.
AC_INIT(sockets.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC(-g)
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_RANLIB
AC_PATH_PROG(AR, ar, /bin/ar, $PATH)
AC_PATH_PROG(LINT, lint, /bin/lint, $PATH)
AC_PROGRAM_CHECK(UNAMEPROG, uname, uname, )
AC_PROGRAM_CHECK(TRPROG, tr, tr, )
AC_PROGRAM_CHECK(SEDPROG, sed, sed, )
AC_PROGRAM_CHECK(CUTPROG, cut, cut, )

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(socket vsprintf vsnprintf snprintf sprintf)

AC_OUTPUT(Makefile)
